--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="main">
         <div id="hero">
             <div id="nav">
-                <a href="#">Saif Ullah</a>
+                <a href="#">Saif Ullah<div class="x-axis-line"></div></a>
                 <h4>MENU+</h4>
             </div>
             <div id="heading">
@@ -43,8 +43,13 @@
                 </div>
             </div>
             <div id="herofooter">
-                <a href="https://webpenter.com" target="_blank">currently working at web penter <i class="ri-arrow-right-up-line"></i></a>
-                <a href="#">Frontend developer <i class="ri-arrow-right-up-line"></i></a>
+                <a href="https://webpenter.com" target="_blank">currently working at web penter <i
+                        class="ri-arrow-right-up-line"></i>
+                    <div class="x-axis-line"></div>
+                </a>
+                <a href="#">Frontend developer <i class="ri-arrow-right-up-line"></i>
+                    <div class="x-axis-line"></div>
+                </a>
                 <div id="iconset">
                     <div class="circle"><a href=""><i class="ri-arrow-down-line"></i></a></div>
                     <div class="circle"><a href=""><i class="ri-arrow-down-line"></i></a></div>
@@ -77,13 +82,20 @@
                     series or playing video games. My developement philosophy is simple: make it visually appealing,
                     functional, and bring a smile to people's faces. I'm the designer you want on your team if you want
                     to make people say 'I need that in my life!'.</p>
-                    <a href="https://wa.me/3146578950?text=Hello,%20I%20would%20like%20to%20know%20more%20about%20your%20services!" target="_blank">
-                        Let's talk</a>
+                <a href="https://wa.me/3146578950?text=Hello,%20I%20would%20like%20to%20know%20more%20about%20your%20services!"
+                    target="_blank">
+                    Let's talk</a>
             </div>
         </div>
         <div id="subscribe">
             <h5>(forgot to mention)</h5>
-            <h3>subscribe to my youtube channel <i class="ri-arrow-right-up-line"></i></h3>
+            <h3>
+                <a href="">
+                    subscribe to my youtube channel
+                    <i class="ri-arrow-right-up-line"></i>
+                    <div class="x-axis-line"></div>
+                </a>
+            </h3>
         </div>
         <div id="footer">
             <div id="footerleft">
@@ -91,7 +103,22 @@
                 <h5 id="time-display"></h5>
             </div>
             <div id="footerright">
-                <a href="#">dribbble</a><a href="https://www.instagram.com/saifullahpoet">instagram</a><a href="#">linkedin</a><a href="#">twitter</a>
+                <a href="#">
+                    dribbble
+                    <div class="x-axis-line"></div>
+                </a>
+                <a href="https://www.instagram.com/saifullahpoet">
+                    instagram
+                    <div class="x-axis-line"></div>
+                </a>
+                <a href="#">
+                    linkedin
+                    <div class="x-axis-line"></div>
+                </a>
+                <a href="#">
+                    twitter
+                    <div class="x-axis-line"></div>
+                </a>
             </div>
         </div>
     </div>
