--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h5>12+</h5>
             </div>
             <div class="elem">
-                <img src="saif-img-2.jpg" alt="">
+                <img src="./ixpi.png" alt="">
                 <h1>Experience</h1>
                 <h5>2 years</h5>
             </div>
